lagt til img mappe og lagt til ressurs mappen med bilder

--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Web development company</title>
     </head>
+    <body>
+        <header>
+            
+        </header>
+    </body>
 </html>
