lagt til header, nav område og startet på main area

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>Web development company</title>
+        <title>Web Development Company!</title>
     </head>
     <body>
         <header>
-            
+            <nav>
+                <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Portfolio</a>
+                <a href="about.html">Contact</a>
+            </nav>
         </header>
+    <main>
+        <section>
+            <h1>Compelling headline</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <a href="about.html">Read more about our services</a>
+        </section>
+        <section>
+            <h2>Engaging subheading. What can you help your visitors with</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        
+    </main>
     </body>
 </html>
