--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
             <h2>Engaging subheading. What can you help your visitors with</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
-        
+        <section>
+            <article>
+                <h2>About our company</h2>
+                <img src="https://placehold.co/600x400" alt="placeholder picture for about section">
+            </article>
+        </section>
+        <section>
+            <h2>Our Services</h2>
+            <ul>
+                <li>Branding<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li>Design<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li>Development<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            </ul>
+        </section>
+
     </main>
     </body>
 </html>
