lagt til subscription felt og knapp

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <header>
             <nav>
                 <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="products.html">Portfolio</a>
-                <a href="about.html">Contact</a>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Portfolio</a></li>
+                    <li><a href="about.html">Contact</a>
+                </ul>
             </nav>
         </header>
     <main>
@@ -41,7 +43,14 @@
                 <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
             </ul>
         </section>
-
+        <section>
+            <h2>Sign up for our newsletter</h2>
+            <input type="text" name="registration" placeholder="Your email here">
+            <input type="submit" value="Sign me up">
+        </section>
     </main>
+    <footer>
+        
+    </footer>
     </body>
 </html>
