lagt til nav og lenker i footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
         </section>
     </main>
     <footer>
-        
+        <nav>
+            <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
+            <ul>
+                <li><a href="https://www.facebook.com">Facebook</a></li>
+                <li><a href="https://www.instagram.com">Instagram</a></li>
+                <li><a href="https://www.linkedin.com">Linkedin</a></li>
+            </ul>
+            <!--Se kildeliste for linker-->
+        </nav>
     </footer>
     </body>
 </html>
