lagt til html på main section i product.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>Web Development Company!</title>
+        <title>INDEX Web Development Company!</title>
     </head>
     <body>
         <header>
@@ -18,6 +18,7 @@
                 </ul>
             </nav>
         </header>
+        <!--MAIN SECTION-->
     <main>
         <section>
             <h1>Compelling headline</h1>
@@ -31,7 +32,8 @@
         <section>
             <article>
                 <h2>About our company</h2>
-                <img src="https://placehold.co/600x400" alt="placeholder picture for about section">
+                <img src="https://placehold.co/400" alt="placeholder picture for about section">
+                <!--Se litteraturliste for kildelink-->
             </article>
         </section>
         <section>
@@ -57,7 +59,7 @@
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
-            <!--Se kildeliste for linker-->
+            <!--Se litteraturliste for kildelenker-->
         </nav>
     </footer>
     </body>
