--- a/products.html
+++ b/products.html
@@ -31,16 +31,57 @@
         <section>
             <h2>Explore previous jobs</h2>
             <hr>
-            <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools.-->
+            <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools.Se litteraturliste-->
             <a href="#" class="port_button">Branding</a>
             <a href="#" class="port_button">Design</a>
             <a href="#" class="port_button">Development</a>
         </section>
         <section>
             <h2>Branding</h2>
-            <article>
-                <img src="https://placehold.co/400" alt="placeholder picture 1">
-            </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder branding article picture 1">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder branding article picture 2">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder branding article picture 3">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder branding article picture 4">
+                    <h3>Et harum quidem</h3>
+                </article>
+        </section>
+        <section>
+            <h2>Design</h2>
+            <hr>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder design article picture 1">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder design article picture 2">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder design article picture 3">
+                    <h3>Et harum quidem</h3>
+                </article>
+        </section>
+        <section>
+            <h2>Development</h2>
+            <hr>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder development article picture 1">
+                    <h3>Et harum quidem</h3>
+                </article>
+                <article>
+                    <img src="https://placehold.co/400" alt="placeholder development article picture 2">
+                    <h3>Et harum quidem</h3>
+                </article>
         </section>
     </main>
     <footer>
