begynt på about.html siden

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
             <h2>Sign up for our newsletter</h2>
             <input type="text" name="registration" placeholder="Your email here">
             <input type="submit" value="Sign me up">
+            <!--Fra AC sin forelesning om responsivt design. Se litteraturliste-->
         </section>
     </main>
     <footer>
         <nav>
             <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
+            <p>Company Copyright 2023</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
                 <li><a href="https://www.instagram.com">Instagram</a></li>
