--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>INDEX Web Development Company!</title>
+        <title>ABOUT Web Development Company!</title>
     </head>
     <body>
         <header>
@@ -20,7 +20,35 @@
         </header>
         <!--MAIN SECTION-->
     <main>
-       
+        <!--må sette inn bakgrunnsbilde i css-->
+       <section>
+        <article>
+            <p>Company name</p>
+            <h2>About our company</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <a href="#">Get in touch with us</a>
+        </article>
+       </section>
+       <section>
+        <h1>Our Services</h1>
+        <ul>
+            <li>Branding<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li>Design<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li>Development<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+        </ul>
+       </section>
+       <section>
+        <h2>Some of our clients</h2>
+            <img class=clients src="img/ressurser/logo1.png" alt="client one logo">
+            <img class=clients src="img/ressurser/logo2.png" alt="client two logo">
+            <img class=clients src="img/ressurser/logo3.png" alt="client three logo">
+       </section>
+       <section>
+        <h2>Contact us</h2>
+        
+       </section>
     </main>
     <footer>
         <nav>
