kodet ferdig about.html og startet smått på css

--- a/about.html
+++ b/about.html
@@ -45,9 +45,32 @@
             <img class=clients src="img/ressurser/logo2.png" alt="client two logo">
             <img class=clients src="img/ressurser/logo3.png" alt="client three logo">
        </section>
-       <section>
+       <section id="contactsection">
         <h2>Contact us</h2>
-        
+        <!--Husket bare litt av hvordan man laget skjema, så måtte inn på AC sitt githubrepo og w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
+            <article>
+                <h3>Send us a message</h3>
+                <form>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name"><br><br>
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject"><br><br>
+                    <label for="message">Message</label>
+                    <input type="text" id="message" name="message"><br><br>
+                    <input type="submit" value="Send message">
+                </form>
+            </article>
+            <article>
+                <h3>Contact information</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>Adresse: B R A Veien 4, 1757 Halden</p>
+                <p>Telefon: 69 60 80 00</p>
+                <p>Epost: postmottak@hiof.no</p>
+            </article>
+            <article>
+                <img src="img/kart.png" alt="picture of map">
+            </article>
        </section>
     </main>
     <footer>
