--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <h2>About our company</h2>
                 <img src="https://placehold.co/400" alt="placeholder picture for about section">
                 <!--Se litteraturliste for kildelink-->
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <a href="about.html">Read more about us</a>
             </article>
         </section>
         <section>
