--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
         <title>ABOUT Web Development Company!</title>
     </head>
     <body>
-        <header>
+        <header id="navigasjon">
             <nav>
                 <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
-                <ul>
+                <ul id="navliste">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Portfolio</a></li>
-                    <li><a href="about.html">Contact</a>
+                    <li id=navbtn><a href="about.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -76,6 +76,7 @@
     <footer>
         <nav>
             <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
+            <article><!--prøve å putte inn p og ul her i morgen"--></article>
             <p>Company Copyright 2023</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
