--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <title>INDEX Web Development Company!</title>
     </head>
     <body>
-        <header>
+        <header id="navigasjon">
             <nav>
                 <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
-                <ul>
+                <ul id="navliste">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="products.html">Portfolio</a></li>
-                    <li><a href="about.html">Contact</a>
+                    <li id=navbtn><a href="about.html">Contact</a>
                 </ul>
             </nav>
         </header>
