--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         </header>
         <!--MAIN SECTION-->
     <main>
-        <section>
-            <h1>Compelling headline</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <a href="about.html">Read more about our services</a>
+        <section id="greysection">
+            <h1 id="h1index">Compeling headline</h1>
+            <p id="greysectionp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
+                fugiat nulla pariatur.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+            <a id=readbtnyellow href="about.html">Read more about our services</a>
         </section>
         <section>
             <h2>Engaging subheading. What can you help your visitors with</h2>
@@ -48,17 +50,17 @@
                 <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
             </ul>
         </section>
-        <section>
+        <section id="signup">
             <h2>Sign up for our newsletter</h2>
-            <input type="text" name="registration" placeholder="Your email here">
-            <input type="submit" value="Sign me up">
+            <input id=signfelt type="text" name="registration">
+            <input id=signbtn type="submit" value="Sign me up">
             <!--Fra AC sin forelesning om responsivt design. Se litteraturliste-->
         </section>
     </main>
     <footer>
         <nav>
             <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
-            <p>Company Copyright 2023</p>
+            <p>Companyrights Companyname 2023</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
                 <li><a href="https://www.instagram.com">Instagram</a></li>
