--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <nav>
             <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
             <article><!--prøve å putte inn p og ul her i morgen"--></article>
-            <p>Company Copyright 2023</p>
+            <p>Companyrights Companyname 2023</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
                 <li><a href="https://www.instagram.com">Instagram</a></li>
