--- a/products.html
+++ b/products.html
@@ -87,7 +87,7 @@
     <footer>
         <nav>
             <a href="index.html"><img src="img/ressurser/logo1.png" alt="picture of company logo"></a>
-            <p>Company Copyright 2023</p>
+            <p>Companyrights Companyname 2023</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
                 <li><a href="https://www.instagram.com">Instagram</a></li>
