lagt til mer css på index

--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
         <section id="greysection">
             <h1 id="h1index">Compeling headline</h1>
             <p id="greysectionp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
-                fugiat nulla pariatur.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
-            <a id=readbtnyellow href="about.html">Read more about our services</a>
+                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in.</p>
+            <a id=readbtnyellow href="#section4index">Read more about our services</a>
         </section>
-        <section>
+        <section id="section2index">
             <h2>Engaging subheading. What can you help your visitors with</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p id="section2p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </section>
-        <section>
-            <article>
-                <h2>About our company</h2>
-                <img src="https://placehold.co/400" alt="placeholder picture for about section">
+        <section id="section3index">
+            <article id="borderbox">
+                <img id="boximg" src="https://placehold.co/400" alt="placeholder picture for about section">
                 <!--Se litteraturliste for kildelink-->
+                <h2>About our company</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                <a href="about.html">Read more about us</a>
+                <a id=boxbtn href="about.html">Read more about us</a>
             </article>
         </section>
-        <section>
-            <h2>Our Services</h2>
-            <ul>
-                <li>Branding<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-                <li>Design<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-                <li>Development<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-                <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+        <section id="section4index">
+            <h2 id="serviceos">Our Services</h2>
+            <ul id="serviceliste">
+                <li class="serviceitems">Branding<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li class="serviceitems">Design<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li class="serviceitems">Development<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <li class="serviceitems">Support<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
             </ul>
         </section>
         <section id="signup">
