--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         <!--MAIN SECTION-->
     <main>
         <!--må sette inn bakgrunnsbilde i css-->
-       <section>
-        <article>
+       <section id="section1about">
+        <article id="article1section">
             <p>Company name</p>
             <h2>About our company</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
