--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section id="section3index">
             <article id="borderbox">
                 <img id="boximg" src="https://placehold.co/400" alt="placeholder picture for about section">
-                <!--Se litteraturliste for kildelink-->
+                <!--Se litteraturliste for kildelink til placeholderbilde-->
                 <h2>About our company</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -66,7 +66,7 @@
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
-            <!--Se litteraturliste for kildelenker-->
+            <!--Se litteraturliste for kildelenker til socials-->
         </nav>
     </footer>
     </body>
