--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </article>
         </section>
         <section id="section4index">
-            <h2 id="serviceos">Our Services</h2>
-            <ul id="serviceliste">
+            <h2 class="serviceos">Our Services</h2>
+            <ul class="serviceliste">
                 <li class="serviceitems">Branding<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
                 <li class="serviceitems">Design<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
                 <li class="serviceitems">Development<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
