--- a/about.html
+++ b/about.html
@@ -20,23 +20,22 @@
         </header>
         <!--MAIN SECTION-->
     <main>
-        <!--må sette inn bakgrunnsbilde i css-->
        <section id="section1about">
         <article id="article1section">
             <p>Company name</p>
             <h2>About our company</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            <p id="articlep">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <a href="#">Get in touch with us</a>
+            <a id=intouchbtn href="#contactussection">Get in touch with us</a>
         </article>
        </section>
-       <section>
-        <h1>Our Services</h1>
-        <ul>
-            <li>Branding<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-            <li>Design<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-            <li>Development<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
-            <li>Support<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+       <section id="section2about">
+        <h1 id="serviceheading">Our Services</h1>
+        <ul class="serviceliste">
+            <li class="serviceitems">Branding<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li class="serviceitems">Design<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li class="serviceitems">Development<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+            <li class="serviceitems">Support<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
         </ul>
        </section>
        <section>
@@ -46,7 +45,7 @@
             <img class=clients src="img/ressurser/logo3.png" alt="client three logo">
        </section>
        <section id="contactsection">
-        <h2>Contact us</h2>
+        <h2 id="contactussection">Contact us</h2>
         <!--Husket bare litt av hvordan man laget skjema, så måtte inn på AC sitt githubrepo og w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
             <article>
                 <h3>Send us a message</h3>
