lagt til mer css på aboutsiden

--- a/about.html
+++ b/about.html
@@ -38,25 +38,25 @@
             <li class="serviceitems">Support<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
         </ul>
        </section>
-       <section>
-        <h2>Some of our clients</h2>
+       <section id="clientsfelt">
+        <h2 id="klienteroverskrift">Some of our clients</h2>
             <img class=clients src="img/ressurser/logo1.png" alt="client one logo">
             <img class=clients src="img/ressurser/logo2.png" alt="client two logo">
             <img class=clients src="img/ressurser/logo3.png" alt="client three logo">
        </section>
        <section id="contactsection">
-        <h2 id="contactussection">Contact us</h2>
+        <h2 id="contactoverskrift">Contact us</h2>
         <!--Husket bare litt av hvordan man laget skjema, så måtte inn på AC sitt githubrepo og w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
-            <article>
+            <article id="messageform">
                 <h3>Send us a message</h3>
                 <form>
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name"><br><br>
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" name="subject"><br><br>
-                    <label for="message">Message</label>
+                    <label class="labeltext" for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Ola Nordmann.."><br><br>
+                    <label class="labeltext" for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject" placeholder="Branding.."><br><br>
+                    <label class="labeltext" for="message">Message</label>
                     <input type="text" id="message" name="message"><br><br>
-                    <input type="submit" value="Send message">
+                    <input id="submitbtn" type="submit" value="Send message">
                 </form>
             </article>
             <article>
@@ -67,10 +67,10 @@
                 <p>Telefon: 69 60 80 00</p>
                 <p>Epost: postmottak@hiof.no</p>
             </article>
-            <article>
-                <img src="img/kart.png" alt="picture of map">
-            </article>
        </section>
+       <section>
+        <img id="kartbilde" src="img/kart.png" alt="picture of map">
+        </section>
     </main>
     <footer>
         <nav>
