lagt til snarvei på button

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <h2>About our company</h2>
             <p id="articlep">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <a id=intouchbtn href="#contactussection">Get in touch with us</a>
+            <a id=intouchbtn href="#contactsection">Get in touch with us</a>
         </article>
        </section>
        <section id="section2about">
