lagt til css på portfolio.html

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
        </section>
        <section id="contactsection">
         <h2 id="contactoverskrift">Contact us</h2>
-        <!--Husket bare litt av hvordan man laget skjema, så måtte inn på AC sitt githubrepo og w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
+        <!--Husket bare litt av hvordan man laget skjema, w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
             <article id="messageform">
                 <h3>Send us a message</h3>
                 <form>
