--- a/products.html
+++ b/products.html
@@ -20,44 +20,41 @@
         </header>
         <!--MAIN SECTION-->
     <main>
-        <section>
-            <h1>Portfolio</h1>
-            <figure>
-            <img src="img/portfolio_bkgr.png" alt="picture of a desk with office supplies">
-            <!--Image by <a href="https://pixabay.com/users/9699186-9699186/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3683817">9699186</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3683817">Pixabay</a>-->
-            <figcaption>Bilde</figcaption>
-            </figure>
+        <section id="headerphoto">
+            <h1 id="portoverskrift">Portfolio</h1>
         </section>
         <section>
-            <h2>Explore previous jobs</h2>
-            <hr>
+            <h2 class="overskrifter">Explore previous jobs</h2>
+            <hr class="strek">
+        </section>
+        <section id="produktknapper">
             <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools.Se litteraturliste-->
-            <a href="#" class="port_button">Branding</a>
+            <a href="#" id="port_button1">Branding</a>
             <a href="#" class="port_button">Design</a>
             <a href="#" class="port_button">Development</a>
         </section>
         <section>
-            <h2>Branding</h2>
-                <article>
+            <h2 class="overskrifter">Branding</h2>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 1">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 2">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 3">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
+                <article id="artikkelkort1">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 4">
                     <h3>Et harum quidem</h3>
                 </article>
         </section>
         <section>
-            <h2>Design</h2>
-            <hr>
+            <h2 class="overskrifter">Design</h2>
+            <hr class="strek">
                 <article>
                     <img src="https://placehold.co/400" alt="placeholder design article picture 1">
                     <h3>Et harum quidem</h3>
@@ -72,8 +69,8 @@
                 </article>
         </section>
         <section>
-            <h2>Development</h2>
-            <hr>
+            <h2 class="overskrifter">Development</h2>
+            <hr class="strek">
                 <article>
                     <img src="https://placehold.co/400" alt="placeholder development article picture 1">
                     <h3>Et harum quidem</h3>
