--- a/products.html
+++ b/products.html
@@ -20,20 +20,24 @@
         </header>
         <!--MAIN SECTION-->
     <main>
-        <section id="headerphoto">
+        <div class="tekstbox">
+            <img id="textboxphoto" src="img/portfolio_bkgr.png" alt="office appliances">
+            <div class="floatingtext">Portfolio</div>
+        </div>
+        <!--<section id="headerphoto">
             <h1 id="portoverskrift">Portfolio</h1>
-        </section>
+        </section>-->
         <section>
             <h2 class="overskrifter">Explore previous jobs</h2>
             <hr class="strek">
         </section>
         <section id="produktknapper">
             <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools.Se litteraturliste-->
-            <a href="#" id="port_button1">Branding</a>
-            <a href="#" class="port_button">Design</a>
-            <a href="#" class="port_button">Development</a>
+            <a href="#brandingsection" id="port_button1">Branding</a>
+            <a href="#designsection" class="port_button">Design</a>
+            <a href="#developmentsection" class="port_button">Development</a>
         </section>
-        <section>
+        <section id="brandingsection">
             <h2 class="overskrifter">Branding</h2>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 1">
@@ -48,35 +52,35 @@
                     <h3>Et harum quidem</h3>
                 </article>
                 <article id="artikkelkort1">
-                    <img src="https://placehold.co/400" alt="placeholder branding article picture 4">
+                    <img id="artikkelpic" src="https://placehold.co/400" alt="placeholder branding article picture 4">
                     <h3>Et harum quidem</h3>
                 </article>
         </section>
-        <section>
+        <section id="designsection">
             <h2 class="overskrifter">Design</h2>
             <hr class="strek">
-                <article>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 1">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 2">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
+                <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 3">
                     <h3>Et harum quidem</h3>
                 </article>
         </section>
-        <section>
+        <section id="developmentsection">
             <h2 class="overskrifter">Development</h2>
             <hr class="strek">
-                <article>
-                    <img src="https://placehold.co/400" alt="placeholder development article picture 1">
+                <article id="artikkelkort2">
+                    <img id="artikkelbilde1" src="https://placehold.co/400" alt="placeholder development article picture 1">
                     <h3>Et harum quidem</h3>
                 </article>
-                <article>
-                    <img src="https://placehold.co/400" alt="placeholder development article picture 2">
+                <article id="artikkelkort3">
+                    <img id="artikkelbilde2" src="https://placehold.co/400" alt="placeholder development article picture 2">
                     <h3>Et harum quidem</h3>
                 </article>
         </section>
