lagt til kilder

--- a/about.html
+++ b/about.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>ABOUT Web Development Company!</title>
+        <title>Web Development Company!</title>
     </head>
     <body>
         <header id="navigasjon">
@@ -26,6 +25,7 @@
             <h2>About our company</h2>
             <p id="articlep">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
             <a id=intouchbtn href="#contactsection">Get in touch with us</a>
         </article>
        </section>
@@ -36,6 +36,7 @@
             <li class="serviceitems">Design<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
             <li class="serviceitems">Development<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
             <li class="serviceitems">Support<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
         </ul>
        </section>
        <section id="clientsfelt">
@@ -46,7 +47,7 @@
        </section>
        <section id="contactsection">
         <h2 id="contactoverskrift">Contact us</h2>
-        <!--Husket bare litt av hvordan man laget skjema, w3schools for å se hvordan man gjorde det. Endte opp med å følge malen fra w3schools.-->
+        <!--Husket bare litt av hvordan man laget skjema, har brukt w3schools for å se hvordan man gjorde det. Se litteraturliste, Nr. 13 og 14.-->
             <article id="messageform">
                 <h3>Send us a message</h3>
                 <form>
@@ -63,6 +64,7 @@
                 <h3>Contact information</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
                 <p>Adresse: B R A Veien 4, 1757 Halden</p>
                 <p>Telefon: 69 60 80 00</p>
                 <p>Epost: postmottak@hiof.no</p>
@@ -81,7 +83,7 @@
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
-            <!--Se litteraturliste for kildelenker-->
+            <!--Lenker til socials. Se litteraturliste, Nr.1,4 og 8.-->
         </nav>
     </footer>
     </body>
