--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>INDEX Web Development Company!</title>
+        <title>Web Development Company!</title>
     </head>
     <body>
         <header id="navigasjon">
@@ -24,20 +23,23 @@
             <h1 id="h1index">Compeling headline</h1>
             <p id="greysectionp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in.</p>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
             <a id=readbtnyellow href="#section4index">Read more about our services</a>
         </section>
         <section id="section2index">
             <h2>Engaging subheading. What can you help your visitors with</h2>
             <p id="section2p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
         </section>
         <section id="section3index">
             <article id="borderbox">
                 <img id="boximg" src="https://placehold.co/400" alt="placeholder picture for about section">
-                <!--Se litteraturliste for kildelink til placeholderbilde-->
+                <!--Placeholderbilde. Se litteraturliste, Nr.10.-->
                 <h2>About our company</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
                 <a id=boxbtn href="about.html">Read more about us</a>
             </article>
         </section>
@@ -48,13 +50,14 @@
                 <li class="serviceitems">Design<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
                 <li class="serviceitems">Development<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
                 <li class="serviceitems">Support<p class="section4p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></li>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
             </ul>
         </section>
         <section id="signup">
             <h2>Sign up for our newsletter</h2>
             <input id=signfelt type="text" name="registration">
             <input id=signbtn type="submit" value="Sign me up">
-            <!--Fra AC sin forelesning om responsivt design. Se litteraturliste-->
+            <!--Fra AC sin forelesning om responsivt design. Se litteraturliste, Nr.5-->
         </section>
     </main>
     <footer>
@@ -66,7 +69,7 @@
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
-            <!--Se litteraturliste for kildelenker til socials-->
+            <!--Lenker til socials. Se litteraturliste, Nr.1,4 og 8.-->
         </nav>
     </footer>
     </body>
