--- a/products.html
+++ b/products.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <title>PRODUCT Web Development Company!</title>
+        <title>Web Development Company!</title>
     </head>
     <body>
         <header id="navigasjon">
@@ -22,17 +21,15 @@
     <main>
         <div class="tekstbox">
             <img id="textboxphoto" src="img/portfolio_bkgr.png" alt="office appliances">
+            <!--Bilde fra Pixabay. Se litteraturliste, Nr.17.-->
             <div class="floatingtext">Portfolio</div>
         </div>
-        <!--<section id="headerphoto">
-            <h1 id="portoverskrift">Portfolio</h1>
-        </section>-->
         <section>
             <h2 class="overskrifter">Explore previous jobs</h2>
             <hr class="strek">
+            <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools. Se litteraturliste, Nr.11.-->
         </section>
         <section id="produktknapper">
-            <!--Var usikker på hvordan jeg lagde horisontal linje så der måtte jeg søke opp på w3schools.Se litteraturliste-->
             <a href="#brandingsection" id="port_button1">Branding</a>
             <a href="#designsection" class="port_button">Design</a>
             <a href="#developmentsection" class="port_button">Development</a>
@@ -41,47 +38,59 @@
             <h2 class="overskrifter">Branding</h2>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 1">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 2">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder branding article picture 3">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article id="artikkelkort1">
                     <img id="artikkelpic" src="https://placehold.co/400" alt="placeholder branding article picture 4">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
                 </article>
         </section>
         <section id="designsection">
             <h2 class="overskrifter">Design</h2>
-            <hr class="strek">
+            <hr class="strek"> <!--Se litteraturliste, Nr.11.-->
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 1">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 2">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article class="artikkelkort">
                     <img src="https://placehold.co/400" alt="placeholder design article picture 3">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
                 </article>
         </section>
         <section id="developmentsection">
             <h2 class="overskrifter">Development</h2>
-            <hr class="strek">
+            <hr class="strek"> <!--Se litteraturliste, Nr.11.-->
                 <article id="artikkelkort2">
                     <img id="artikkelbilde1" src="https://placehold.co/400" alt="placeholder development article picture 1">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
                 </article>
                 <article id="artikkelkort3">
                     <img id="artikkelbilde2" src="https://placehold.co/400" alt="placeholder development article picture 2">
+                    <!--Placehold bilde. Se litteraturliste, Nr.10.-->
                     <h3>Et harum quidem</h3>
+                <!--Lorem Ipsum. Se litteraturliste, Nr.9.-->
                 </article>
         </section>
     </main>
@@ -94,7 +103,7 @@
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.linkedin.com">Linkedin</a></li>
             </ul>
-            <!--Se litteraturliste for kildelenker-->
+            <!--Lenker til Socials. Se litteraturliste, Nr.1,4 og 8.-->
         </nav>
     </footer>
     </body>
